testsuite/poke.pkl/apush-diag-5.pk
/* { dg-do compile } */

var a = int[8#B] ();

apush (a, 0); /* { dg-error "apush operation is not allowed" } */
